crates/aranya-policy-compiler/tests/data/type_errors/option_arg_invalid_type.fail.policy
function bar(x int) bool {
    return false
}
function foo() bool {
    return bar(Some(3))
}
